// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ledger theme Avatar lg 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#3a1a1a",
      "borderRadius": 22,
      "height": 44,
      "justifyContent": "center",
      "overflow": "hidden",
      "width": 44,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 22,
        },
        {
          "color": "#182420",
        },
        {
          "color": "#ffffff",
          "fontSize": 21,
          "fontWeight": "600",
          "includeFontPadding": false,
          "lineHeight": 23,
        },
      ]
    }
  >
    T
  </Text>
</View>
`;

exports[`ledger theme Avatar md 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#2d2260",
      "borderRadius": 18,
      "height": 36,
      "justifyContent": "center",
      "overflow": "hidden",
      "width": 36,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 22,
        },
        {
          "color": "#182420",
        },
        {
          "color": "#ffffff",
          "fontSize": 17,
          "fontWeight": "600",
          "includeFontPadding": false,
          "lineHeight": 19,
        },
      ]
    }
  >
    J
  </Text>
</View>
`;

exports[`ledger theme Avatar sm 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#1a3a2a",
      "borderRadius": 14,
      "height": 28,
      "justifyContent": "center",
      "overflow": "hidden",
      "width": 28,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 22,
        },
        {
          "color": "#182420",
        },
        {
          "color": "#ffffff",
          "fontSize": 14,
          "fontWeight": "600",
          "includeFontPadding": false,
          "lineHeight": 16,
        },
      ]
    }
  >
    M
  </Text>
</View>
`;

exports[`ledger theme Badge custom 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "backgroundColor": "#3d2200",
      "borderRadius": 22,
      "paddingHorizontal": 8,
      "paddingVertical": 2,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "color": "#fbbf24",
        },
        undefined,
      ]
    }
  >
    €8.50
  </Text>
</View>
`;

exports[`ledger theme Badge default 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "backgroundColor": "#E2F1EA",
      "borderRadius": 22,
      "paddingHorizontal": 8,
      "paddingVertical": 2,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "color": "#12946A",
        },
        undefined,
      ]
    }
  >
    Assigned
  </Text>
</View>
`;

exports[`ledger theme Button danger 1`] = `
<View
  style={
    {
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FBE7DE",
        "borderColor": undefined,
        "borderRadius": 22,
        "borderWidth": 0,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "Inter-Medium",
            "fontSize": 13,
            "fontWeight": "500",
            "lineHeight": 18,
          },
          {
            "color": "#D9532B",
          },
          undefined,
        ]
      }
    >
      Delete
    </Text>
  </View>
</View>
`;

exports[`ledger theme Button disabled 1`] = `
<View
  style={
    {
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#0E6B4F",
        "borderColor": undefined,
        "borderRadius": 22,
        "borderWidth": 0,
        "opacity": 0.7,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "Inter-Medium",
            "fontSize": 13,
            "fontWeight": "500",
            "lineHeight": 18,
          },
          {
            "color": "#FFFFFF",
          },
          undefined,
        ]
      }
    >
      Pay
    </Text>
  </View>
</View>
`;

exports[`ledger theme Button ghost 1`] = `
<View
  style={
    {
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "#0E6B4F",
        "borderRadius": 22,
        "borderWidth": 1,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "Inter-Medium",
            "fontSize": 13,
            "fontWeight": "500",
            "lineHeight": 18,
          },
          {
            "color": "#0E6B4F",
          },
          undefined,
        ]
      }
    >
      Cancel
    </Text>
  </View>
</View>
`;

exports[`ledger theme Button primary 1`] = `
<View
  style={
    {
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#0E6B4F",
        "borderColor": undefined,
        "borderRadius": 22,
        "borderWidth": 0,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "Inter-Medium",
            "fontSize": 13,
            "fontWeight": "500",
            "lineHeight": 18,
          },
          {
            "color": "#FFFFFF",
          },
          undefined,
        ]
      }
    >
      Pay
    </Text>
  </View>
</View>
`;

exports[`ledger theme Button sm 1`] = `
<View
  style={
    {
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#0E6B4F",
        "borderColor": undefined,
        "borderRadius": 22,
        "borderWidth": 0,
        "opacity": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "Inter-Medium",
            "fontSize": 13,
            "fontWeight": "500",
            "lineHeight": 18,
          },
          {
            "color": "#FFFFFF",
          },
          undefined,
        ]
      }
    >
      Pay
    </Text>
  </View>
</View>
`;

exports[`ledger theme Card 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 18,
        "boxShadow": "0px 1px 2px rgba(0, 0, 0, 0.15)",
        "elevation": 2,
        "padding": 16,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 22,
        },
        {
          "color": "#182420",
        },
        undefined,
      ]
    }
  >
    Content
  </Text>
</View>
`;

exports[`ledger theme Card pressable 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 18,
        "boxShadow": "0px 1px 2px rgba(0, 0, 0, 0.15)",
        "elevation": 2,
        "padding": 16,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 22,
        },
        {
          "color": "#182420",
        },
        undefined,
      ]
    }
  >
    Tap me
  </Text>
</View>
`;

exports[`ledger theme Divider 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#E4EAE3",
        "height": 1,
      },
      undefined,
    ]
  }
/>
`;

exports[`ledger theme ScreenWrapper 1`] = `
<View
  edges={
    [
      "top",
      "left",
      "right",
    ]
  }
  style={
    [
      {
        "backgroundColor": "#F2F5F1",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 22,
        },
        {
          "color": "#182420",
        },
        undefined,
      ]
    }
  >
    Screen
  </Text>
</View>
`;

exports[`ledger theme Text body 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Inter-Regular",
        "fontSize": 15,
        "fontWeight": "400",
        "lineHeight": 22,
      },
      {
        "color": "#182420",
      },
      undefined,
    ]
  }
>
  Hello
</Text>
`;

exports[`ledger theme Text caption 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Inter-Regular",
        "fontSize": 11,
        "fontWeight": "400",
        "lineHeight": 16,
      },
      {
        "color": "#182420",
      },
      undefined,
    ]
  }
>
  Small
</Text>
`;

exports[`ledger theme Text heading1 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "SpaceGrotesk-Bold",
        "fontSize": 30,
        "fontWeight": "700",
        "lineHeight": 36,
      },
      {
        "color": "#182420",
      },
      undefined,
    ]
  }
>
  Title
</Text>
`;

exports[`ledger theme Text heading2 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "SpaceGrotesk-Bold",
        "fontSize": 24,
        "fontWeight": "700",
        "lineHeight": 30,
      },
      {
        "color": "#182420",
      },
      undefined,
    ]
  }
>
  Subtitle
</Text>
`;

exports[`ledger theme Text heading3 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "SpaceGrotesk-SemiBold",
        "fontSize": 20,
        "fontWeight": "600",
        "lineHeight": 26,
      },
      {
        "color": "#182420",
      },
      undefined,
    ]
  }
>
  Section
</Text>
`;

exports[`ledger theme Text label 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Inter-Medium",
        "fontSize": 13,
        "fontWeight": "500",
        "lineHeight": 18,
      },
      {
        "color": "#182420",
      },
      undefined,
    ]
  }
>
  Label
</Text>
`;

exports[`ledger theme Text mono 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "SpaceGrotesk-Bold",
        "fontSize": 13,
        "fontWeight": "700",
        "lineHeight": 18,
      },
      {
        "color": "#182420",
      },
      undefined,
    ]
  }
>
  €12.50
</Text>
`;
